--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -27,5 +27,24 @@
 .hotel-view {
   background-color: #fff;
   flex: 1;
-  height: 80rem;
+}
+//
+.detail {
+  display: flex;
+  padding: 4.4rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: 1px solid var(--color-grey-light-2);
+}
+
+.description {
+  font-size: 1.4rem;
+  flex: 0 0 60%;
+  margin-right: 2.2rem;
+  background-color: #fff;
+  box-shadow: 0 2rem 2rem rgba(14, 14, 14, 0.08);
+  padding: 3rem;
+}
+
+.reviews {
+  flex: 1;
 }
